[tool.poetry]
name = "proxy-binder-test"
version = "0.1.0"
description = ""
authors = ["QdMiracle <qdmiracle21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"
asyncio = "^3.4.3"
pydantic-settings = "^2.6.1"
aiohttp = "^3.10.10"
loguru = "^0.7.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
